Changed Level backgrounds and added outline to cannon

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/Tutorial1
-MRUItem1=/Game/Levels/Level5
-MRUItem2=/Game/Levels/Level2
-MRUItem3=/Game/Levels/Level3
-MRUItem4=/Game/Levels/Level4
-MRUItem5=/Game/Levels/TylerLevel1
-MRUItem6=/Game/Levels/JoeLevel3
-MRUItem7=/Game/Levels/TylerLevel3
-MRUItem8=/Game/Levels/MainMenu
-MRUItem9=/Game/Levels/JoeLevel1
-MRUItem10=/Game/Levels/Tutorial3
-MRUItem11=/Game/Levels/Tutorial2
+MRUItem0=/Game/Levels/TylerLevel3
+MRUItem1=/Game/Levels/TylerLevel1
+MRUItem2=/Game/Levels/Tutorial3
+MRUItem3=/Game/Levels/Tutorial2
+MRUItem4=/Game/Levels/Tutorial1
+MRUItem5=/Game/Levels/MainMenu
+MRUItem6=/Game/Levels/Level5
+MRUItem7=/Game/Levels/Level4
+MRUItem8=/Game/Levels/Level3
+MRUItem9=/Game/Levels/Level2
+MRUItem10=/Game/Levels/Level1
+MRUItem11=/Game/Levels/JoeLevel3
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,17 +163,14 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/Tutorial1
+LastLevel=/Game/Levels/TylerLevel3
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/PauseWidget.PauseWidget
+OpenAssetsAtExit=/Game/Materials/CannonMaterial.CannonMaterial
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
+OpenAssetsAtExit=/Game/Textures/CannonTexture.CannonTexture
+OpenAssetsAtExit=/Game/Textures/CannonTexture2.CannonTexture2
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1920,6 +1917,8 @@ K2Node_InputTouch.Input=True
 /Game/Materials/MenuBackgroundMaterial.MenuBackgroundMaterial=1
 /Game/Textures/MainMenuPictures/TitleText.TitleText=0
 /Game/Textures/MainMenuPictures/TitleImage.TitleImage=0
+/Game/Textures/CannonTexture2.CannonTexture2=0
+/Game/Materials/CannonMaterial.CannonMaterial=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1927,7 +1926,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2055,6 +2054,7 @@ TileWallSlanted2_C="\"Object.Default.Waypoints\" "
 TileCrossSection_C="\"Object.Default.Waypoints\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Textures/MainMenuPictures/LargeMenuBackground_Sprite.LargeMenuBackground_Sprite;
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileDoubleWall.TileDoubleWall;
@@ -2074,7 +2074,6 @@ RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEmptySlanted.TileEmptySlanted;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -2712,12 +2711,12 @@ bShowMobileStats=False
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
-PrimType=1
+PrimType=3
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Auto Exposure,PostProcessVolume.Lens.Lens|Bloom,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
