Lowered bloom and made cannon outline smaller

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -94,13 +94,13 @@ MRUItem1=/Game/Levels/TylerLevel1
 MRUItem2=/Game/Levels/Tutorial3
 MRUItem3=/Game/Levels/Tutorial2
 MRUItem4=/Game/Levels/Tutorial1
-MRUItem5=/Game/Levels/MainMenu
-MRUItem6=/Game/Levels/Level5
-MRUItem7=/Game/Levels/Level4
-MRUItem8=/Game/Levels/Level3
-MRUItem9=/Game/Levels/Level2
-MRUItem10=/Game/Levels/Level1
-MRUItem11=/Game/Levels/JoeLevel3
+MRUItem5=/Game/Levels/Level5
+MRUItem6=/Game/Levels/Level4
+MRUItem7=/Game/Levels/Level3
+MRUItem8=/Game/Levels/Level2
+MRUItem9=/Game/Levels/Level1
+MRUItem10=/Game/Levels/JoeLevel3
+MRUItem11=/Game/Levels/JoeLevel2
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -167,10 +167,6 @@ LastLevel=/Game/Levels/TylerLevel3
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Materials/CannonMaterial.CannonMaterial
-OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
-OpenAssetsAtExit=/Game/Textures/CannonTexture.CannonTexture
-OpenAssetsAtExit=/Game/Textures/CannonTexture2.CannonTexture2
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1919,6 +1915,7 @@ K2Node_InputTouch.Input=True
 /Game/Textures/MainMenuPictures/TitleImage.TitleImage=0
 /Game/Textures/CannonTexture2.CannonTexture2=0
 /Game/Materials/CannonMaterial.CannonMaterial=1
+/Game/Textures/CannonTexture2_Sprite.CannonTexture2_Sprite=1
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -1926,7 +1923,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object.Collision.BodyInstance\" "
 ActorComponent="\"Object.Collision.BodyInstance\" "
-Object=
+Object="\"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2716,7 +2713,7 @@ PrimType=3
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Auto Exposure,PostProcessVolume.Lens.Lens|Bloom,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
