Improved mobile performance and reduced file size

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/TylerLevel3
-MRUItem1=/Game/Levels/TylerLevel1
-MRUItem2=/Game/Levels/Tutorial3
-MRUItem3=/Game/Levels/Tutorial2
-MRUItem4=/Game/Levels/Tutorial1
-MRUItem5=/Game/Levels/Level5
-MRUItem6=/Game/Levels/Level4
-MRUItem7=/Game/Levels/Level3
-MRUItem8=/Game/Levels/Level2
-MRUItem9=/Game/Levels/Level1
-MRUItem10=/Game/Levels/JoeLevel3
-MRUItem11=/Game/Levels/JoeLevel2
+MRUItem0=/Game/Levels/JoeLevel1
+MRUItem1=/Game/Levels/TylerLevel3
+MRUItem2=/Game/Levels/TylerLevel1
+MRUItem3=/Game/Levels/Tutorial3
+MRUItem4=/Game/Levels/Tutorial2
+MRUItem5=/Game/Levels/Tutorial1
+MRUItem6=/Game/Levels/Level5
+MRUItem7=/Game/Levels/Level4
+MRUItem8=/Game/Levels/Level3
+MRUItem9=/Game/Levels/Level2
+MRUItem10=/Game/Levels/Level1
+MRUItem11=/Game/Levels/JoeLevel3
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -163,7 +163,7 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Levels
 
 [EditorStartup]
-LastLevel=/Game/Levels/TylerLevel3
+LastLevel=/Game/Levels/JoeLevel1
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -2713,7 +2713,7 @@ PrimType=3
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
