--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -20,8 +20,8 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/Prototype_Group_11")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=True
-r.Mobile.DisableVertexFog=False
+r.MobileHDR=False
+r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
 r.DiscardUnusedQuality=False
@@ -202,5 +202,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-
