--- a/Development/Unreal Project/Config/DefaultGame.ini
+++ b/Development/Unreal Project/Config/DefaultGame.ini
@@ -23,8 +23,8 @@ HttpChunkInstallDataDirectory=(Path="")
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=False
-bSharedMaterialNativeLibraries=False
+bShareMaterialShaderCode=True
+bSharedMaterialNativeLibraries=True
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
@@ -33,10 +33,10 @@ InternationalizationPreset=English
 DefaultCulture=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bEncryptIniFiles=False
 bEncryptPakIndex=False
-bSkipEditorContent=False
+bSkipEditorContent=True
 -MapsToCook=(FilePath="/Game/Levels/MainMenu")
 -MapsToCook=(FilePath="/Game/Levels/JoeLevel1")
 -MapsToCook=(FilePath="/Game/Levels/JoeLevel2")
@@ -67,5 +67,4 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/Levels/TylerLevel3")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
