Changed project settings

--- a/Development/Unreal Project/Config/DefaultGame.ini
+++ b/Development/Unreal Project/Config/DefaultGame.ini
@@ -23,8 +23,8 @@ HttpChunkInstallDataDirectory=(Path="")
 HttpChunkInstallDataVersion=
 IncludePrerequisites=True
 IncludeAppLocalPrerequisites=False
-bShareMaterialShaderCode=True
-bSharedMaterialNativeLibraries=True
+bShareMaterialShaderCode=False
+bSharedMaterialNativeLibraries=False
 ApplocalPrerequisitesDirectory=(Path="")
 IncludeCrashReporter=False
 InternationalizationPreset=English
@@ -33,10 +33,10 @@ InternationalizationPreset=English
 DefaultCulture=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=True
+bCompressed=False
 bEncryptIniFiles=False
 bEncryptPakIndex=False
-bSkipEditorContent=True
+bSkipEditorContent=False
 -MapsToCook=(FilePath="/Game/Levels/MainMenu")
 -MapsToCook=(FilePath="/Game/Levels/JoeLevel1")
 -MapsToCook=(FilePath="/Game/Levels/JoeLevel2")
