Replaced Laser Pointer debug line with beam material

--- a/Development/Unreal Project/Config/DefaultGame.ini
+++ b/Development/Unreal Project/Config/DefaultGame.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D9944A2E47F83007520B4496AD6EA012
-ProjectName=Group11Project
+ProjectName=KAZU-10
 
 [StartupActions]
 bAddPacks=True
@@ -67,4 +67,3 @@ bSkipEditorContent=False
 +MapsToCook=(FilePath="/Game/Levels/TylerLevel3")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
