--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,17 +89,17 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/JoeLevel1
-MRUItem1=/Game/Levels/TylerLevel3
-MRUItem2=/Game/Levels/TylerLevel1
-MRUItem3=/Game/Levels/Tutorial3
-MRUItem4=/Game/Levels/Tutorial2
-MRUItem5=/Game/Levels/Tutorial1
-MRUItem6=/Game/Levels/Level5
-MRUItem7=/Game/Levels/Level4
-MRUItem8=/Game/Levels/Level3
-MRUItem9=/Game/Levels/Level2
-MRUItem10=/Game/Levels/Level1
+MRUItem0=/Game/Levels/Tutorial1
+MRUItem1=/Game/Levels/Level1
+MRUItem2=/Game/Levels/JoeLevel1
+MRUItem3=/Game/Levels/TylerLevel3
+MRUItem4=/Game/Levels/TylerLevel1
+MRUItem5=/Game/Levels/Tutorial3
+MRUItem6=/Game/Levels/Tutorial2
+MRUItem7=/Game/Levels/Level5
+MRUItem8=/Game/Levels/Level4
+MRUItem9=/Game/Levels/Level3
+MRUItem10=/Game/Levels/Level2
 MRUItem11=/Game/Levels/JoeLevel3
 
 [LevelSequenceEditor SequencerSettings]
@@ -160,13 +160,16 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/MainMenu
+LastLevel=/Game/Levels/Tutorial1
 
 [AssetEditorManager]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
+OpenAssetsAtExit=/Game/Materials/LaserPointerMaterial.LaserPointerMaterial
+OpenAssetsAtExit=/Game/Particles/LaserPointerParticle.LaserPointerParticle
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1736,6 +1739,28 @@ WorldSettings.LODSystem=True
 WorldSettings.VR=True
 WorldSettings.Tick=True
 K2Node_InputTouch.Input=True
+ParticleModuleTypeDataBeam2.Beam=True
+ParticleModuleTypeDataBeam2.Branching=True
+ParticleModuleTypeDataBeam2.Distance=True
+ParticleModuleTypeDataBeam2.Taper=True
+ParticleModuleTypeDataBeam2.Rendering=True
+ParticleModuleTypeDataBeam2.Cascade=True
+ParticleModuleBeamSource.Source=True
+ParticleModuleBeamSource.Cascade=True
+ParticleModuleBeamTarget.Target=True
+ParticleModuleBeamTarget.Cascade=True
+MaterialExpressionParticleColor.MaterialExpression=True
+ParticleModuleColor.Color=True
+ParticleModuleColor.Cascade=True
+MaterialExpressionSine.MaterialExpressionSine=True
+MaterialExpressionSine.MaterialExpression=True
+ParticleModuleOrientationAxisLock.Orientation=True
+ParticleModuleOrientationAxisLock.Cascade=True
+ParticleModuleBeamModifier.Modifier=True
+ParticleModuleBeamModifier.Position=True
+ParticleModuleBeamModifier.Tangent=True
+ParticleModuleBeamModifier.Strength=True
+ParticleModuleBeamModifier.Cascade=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1916,14 +1941,15 @@ K2Node_InputTouch.Input=True
 /Game/Textures/CannonTexture2.CannonTexture2=0
 /Game/Materials/CannonMaterial.CannonMaterial=1
 /Game/Textures/CannonTexture2_Sprite.CannonTexture2_Sprite=1
+/Game/Particles/CannonLaserPointer.CannonLaserPointer=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object.Collision.BodyInstance\" "
-SceneComponent="\"Object.Collision.BodyInstance\" "
-ActorComponent="\"Object.Collision.BodyInstance\" "
-Object="\"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
+PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
+SceneComponent="\"Object.Particles.InstanceParameters\" "
+ActorComponent="\"Object.Particles.InstanceParameters\" "
+Object="\"Object.Particles.InstanceParameters\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -1947,7 +1973,7 @@ MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Para
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Console.ConsoleKeys\" "
+InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Console.ConsoleKeys\" "
 SphereComponent="\"Object.Collision.BodyInstance\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" "
 BoxComponent="\"Object.Collision.BodyInstance\" "
@@ -1961,8 +1987,8 @@ CrowdManager="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.
 CrowdManagerBase="\"Object.Config.AvoidanceConfig\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[0]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[1]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[2]\" \"Object.Config.AvoidanceConfig.AvoidanceConfig[3]\" "
 GameplayDebuggerConfig="\"Object.AddOns.Categories\" \"Object.AddOns.Categories.Categories[0]\" \"Object.AddOns.Categories.Categories[1]\" \"Object.AddOns.Categories.Categories[2]\" \"Object.AddOns.Categories.Categories[2].InputHandlers\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Categories.Categories[2].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Categories.Categories[3]\" \"Object.AddOns.Categories.Categories[4]\" \"Object.AddOns.Categories.Categories[5]\" \"Object.AddOns.Extensions\" \"Object.AddOns.Extensions.Extensions[0]\" \"Object.AddOns.Extensions.Extensions[0].InputHandlers\" \"Object.AddOns.Extensions.Extensions[0].InputHandlers.InputHandlers[0]\" \"Object.AddOns.Extensions.Extensions[0].InputHandlers.InputHandlers[1]\" \"Object.AddOns.Extensions.Extensions[1]\" \"Object.AddOns.Extensions.Extensions[1].InputHandlers\" \"Object.AddOns.Extensions.Extensions[1].InputHandlers.InputHandlers[0]\" "
 UserInterfaceSettings="\"Object.DPI Scaling.UIScaleCurve\" "
-EditorProjectAppearanceSettings="\"Object.Units.DistanceUnits\" "
-ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyClasses\" "
+EditorProjectAppearanceSettings="\"Object.Units.DistanceUnits\" \"Object.Units.MassUnits\" \"Object.Units.TimeUnits\" "
+ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths\" \"Object.ClassVisibilityManagement.InternalOnlyClasses\" "
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" \"Object.TrackSettings.FbxSettings.FbxSettings[0]\" \"Object.TrackSettings.FbxSettings.FbxSettings[0].PropertyPath\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
@@ -1988,19 +2014,19 @@ Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
 GameModeBase="\"Object.Levels\" \"Object.Levels\" "
-Info="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
+Info=
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
 Target_C="\"Object.Default.Waypoints\" "
 AtmosphericFog="\"Object.Atmosphere.AtmosphericFogComponent.Object.DefaultLightColor\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-ParticleModule="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale\" \"Object.Taper.TaperScale.Distribution\" "
 ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" "
-ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" "
+ParticleModuleColorBase="\"Object.Color.StartColor\" \"Object.Color.StartColor.Distribution\" \"Object.Color.StartAlpha\" \"Object.Color.StartAlpha.Distribution\" "
 ParticleModuleAcceleration="\"Object.Acceleration.Acceleration\" \"Object.Acceleration.Acceleration.Distribution\" "
 ParticleModuleAccelerationBase="\"Object.Acceleration.Acceleration\" \"Object.Acceleration.Acceleration.Distribution\" "
 ParticleModuleLifetime="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifetime.Distribution\" "
@@ -2009,8 +2035,8 @@ ParticleModuleCollision="\"Object.Collision.DampingFactor.Distribution\" \"Objec
 ParticleModuleCollisionBase="\"Object.Collision.DampingFactor.Distribution\" \"Object.Collision.DampingFactorRotation.Distribution\" \"Object.Collision.MaxCollisions\" \"Object.Collision.MaxCollisions.Distribution\" \"Object.Collision.CollisionTypes\" \"Object.Collision.ParticleMass.Distribution\" \"Object.Collision.DelayAmount.Distribution\" "
 ParticleModuleEventGenerator="\"Object.Events.Events\" \"Object.Events.Events.Events[0]\" "
 ParticleModuleEventBase="\"Object.Events.Events\" \"Object.Events.Events.Events[0]\" "
-ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
-ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
+ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleSizeMultiplyLife="\"Object.Size.LifeMultiplier\" \"Object.Size.LifeMultiplier.Distribution\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points\" \"Object.Size.LifeMultiplier.Distribution.Object.ConstantCurve.Points.Points[1]\" "
 ParticleModuleKillBox="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
 ParticleModuleKillBase="\"Object.Kill.LowerLeftCorner.Distribution\" \"Object.Kill.UpperRightCorner.Distribution\" "
@@ -2049,8 +2075,22 @@ TileEmptySlanted_C="\"Object.Default.Waypoints\" "
 TileWallSlanted1_C="\"Object.Default.Waypoints\" "
 TileWallSlanted2_C="\"Object.Default.Waypoints\" "
 TileCrossSection_C="\"Object.Default.Waypoints\" "
+ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
+LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" "
+PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
+ParticleModuleTypeDataBeam2="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale\" \"Object.Taper.TaperScale.Distribution\" "
+ParticleModuleTypeDataBase="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale\" \"Object.Taper.TaperScale.Distribution\" "
+ParticleModuleBeamSource="\"Object.Source.Source\" \"Object.Source.Source.Distribution\" \"Object.Source.SourceTangent\" \"Object.Source.SourceTangent.Distribution\" \"Object.Source.SourceStrength\" \"Object.Source.SourceStrength.Distribution\" "
+ParticleModuleBeamBase="\"Object.Position.Position\" \"Object.Position.Position.Distribution\" \"Object.Tangent.TangentOptions\" \"Object.Tangent.Tangent\" \"Object.Tangent.Tangent.Distribution\" \"Object.Strength.StrengthOptions\" \"Object.Strength.Strength\" \"Object.Strength.Strength.Distribution\" "
+ParticleModuleBeamTarget="\"Object.Target.Target\" \"Object.Target.Target.Distribution\" \"Object.Target.TargetTangent\" \"Object.Target.TargetTangent.Distribution\" \"Object.Target.TargetStrength\" \"Object.Target.TargetStrength.Distribution\" "
+ParticleModuleColor="\"Object.Color.StartColor\" \"Object.Color.StartColor.Distribution\" \"Object.Color.StartAlpha\" \"Object.Color.StartAlpha.Distribution\" "
+Emitter="\"Object.Emitter.ParticleSystemComponent.Object.Particles.InstanceParameters\" "
+ParticleSystemComponent="\"Object.Particles.InstanceParameters\" "
+ParticleModuleBeamModifier="\"Object.Position.Position\" \"Object.Position.Position.Distribution\" \"Object.Tangent.TangentOptions\" \"Object.Tangent.Tangent\" \"Object.Tangent.Tangent.Distribution\" \"Object.Strength.StrengthOptions\" \"Object.Strength.Strength\" \"Object.Strength.Strength.Distribution\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Particles/LaserPointerParticle.LaserPointerParticle;
+RecentlyPlaced=/Game/Particles/CannonLaserPointer.CannonLaserPointer;
 RecentlyPlaced=/Game/Textures/MainMenuPictures/LargeMenuBackground_Sprite.LargeMenuBackground_Sprite;
 RecentlyPlaced=/Game/Blueprints/MovementWaypoint.MovementWaypoint;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileTJunction.TileTJunction;
@@ -2069,8 +2109,6 @@ RecentlyPlaced=/Game/Blueprints/Tiles/TileSingle.TileSingle;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted2.TileWallSlanted2;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWallSlanted1.TileWallSlanted1;
 RecentlyPlaced=/Game/Blueprints/Tiles/TileCorner.TileCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileConnectedCorner.TileConnectedCorner;
-RecentlyPlaced=/Game/Blueprints/Tiles/TileEmpty.TileEmpty;
 
 [DetailCategoriesAdvanced]
 StaticMeshComponent.Physics=False
@@ -2109,7 +2147,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Joseph/Desktop/Kazu-10/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
+UNR=../../../../../../Users/Tyler/Documents/GitHub/mgp-mgp-group-11/Development/Unreal Project/Content/Levels
 BRUSH=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBX=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
 FBXAnim=../../../../../../Users/Joseph/Desktop/Unreal Projects/Prototype_Group_11/Content/
@@ -2770,7 +2808,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindin
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,
@@ -2780,6 +2818,7 @@ ObjectProperty=
 BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
+ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
