Enabled Mobile HDR

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -163,13 +163,10 @@ AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 
 [EditorStartup]
-LastLevel=/Game/Levels/Tutorial1
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Cannon.Cannon
-OpenAssetsAtExit=/Game/Materials/LaserPointerMaterial.LaserPointerMaterial
-OpenAssetsAtExit=/Game/Particles/LaserPointerParticle.LaserPointerParticle
+CleanShutdown=True
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1949,7 +1946,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
 SceneComponent="\"Object.Particles.InstanceParameters\" "
 ActorComponent="\"Object.Particles.InstanceParameters\" "
-Object="\"Object.Particles.InstanceParameters\" "
+Object=
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2076,7 +2073,7 @@ TileWallSlanted1_C="\"Object.Default.Waypoints\" "
 TileWallSlanted2_C="\"Object.Default.Waypoints\" "
 TileCrossSection_C="\"Object.Default.Waypoints\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
-LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" "
+LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 ParticleModuleTypeDataBeam2="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale\" \"Object.Taper.TaperScale.Distribution\" "
 ParticleModuleTypeDataBase="\"Object.Distance.Distance\" \"Object.Distance.Distance.Distribution\" \"Object.Taper.TaperFactor\" \"Object.Taper.TaperFactor.Distribution\" \"Object.Taper.TaperScale\" \"Object.Taper.TaperScale.Distribution\" "
