--- a/Development/Unreal Project/Config/DefaultEngine.ini
+++ b/Development/Unreal Project/Config/DefaultEngine.ini
@@ -20,7 +20,7 @@ MinimumiOSVersion=IOS_8
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_2DSideScrollerBP",NewGameName="/Script/Prototype_Group_11")
 
 [/Script/Engine.RendererSettings]
-r.MobileHDR=False
+r.MobileHDR=True
 r.Mobile.DisableVertexFog=True
 r.Shadow.CSM.MaxMobileCascades=2
 r.MobileMSAA=1
@@ -202,5 +202,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
